cap1 y cap4 pre comentarios directores

--- a/1_introduction/2_contexto.tex
+++ b/1_introduction/2_contexto.tex
@@ -24,7 +24,7 @@ La idea de que la educación pueda ser tratada como una \emph{ciencia del diseñ
 La metodología de \emph{investigación del diseño} (DBR, del inglés, design-based research) fue concebida para solucionar esta separación entre la teoría y la práctica en la investigación. El DBR, cuyo método práctico principal es el experimento de diseño, es un enfoque de investigación mixto interdisciplinar que se lleva a cabo directamente en el área en la que se aplica y que enriquece también el conocimiento teórico de dicho área~\cite{reimann2011design}. DBR no es una metodología clásicamente experimental, sino iterativa, que se basa en ir refinando progresivamente el diseño inicial basado en la teoría. Según el análisis realizado por Terry Andersen y Julie Shattuck~\cite{anderson2012design}, las características que un estudio DBR de calidad en la educación debe tener son las siguientes:
 
 \begin{itemize}
-\item \emph{Contexto educativo real}: tener lugar en un contexto educativo real avala la validez de la investigación y asegura que los resultados puedan ser efectivamente utilizados para evaluar, informar y mejorar la práctica en, al menos, este contexto y probablemte en otros.
+\item \emph{Estar situado en un contexto educativo real}: tener lugar en un contexto educativo real avala la validez de la investigación y asegura que los resultados puedan ser efectivamente utilizados para evaluar, informar y mejorar la práctica en, al menos, este contexto y probablemte en otros.
 \item \emph{Enfocado en el diseño y prueba de una intervención significativa}: la selección y la creación de una intervención es una tarea colaborativa que atañe a investigadores y profesores. La creación comienza con un preciso análisis del contexto local; se basa en la literatura relevante, en la teoría y en las prácticas de otros contextos; y se diseña específicamente para solventar un problema o aportar una mejora en la practica. La intervención podría ser, por ejemplo, una actividad de aprendizaje, un tipo de evaluación, la introducción de una actividad administrativa (como un cambio en las vacaciones) o una intervención tecnológica. % the intervention may be a TYPE OF ASSESSMENT (el nuestro!)
 \item \emph{Empleo de métodos mixtos}: las intervenciones DBR implican la aplicación conjunta de diferentes métodos mediante el empleo de una variedad de herramientas y técnicas de investigación. Los investigadores eligen, utilizan y combinan unos métodos u otros en función de sus necesidades.
 \item \emph{Múltiples iteraciones}: la práctica del diseño suele implicar la creación y prueba de prototipos, refinamiento iterativo y la continua evolución del diseño, de la misma forma que ocurre en otros conocidos procesos de diseño como son, por ejemplo, la fabricación de coches o la moda.
